--- a/META-INF/mods.toml
+++ b/META-INF/mods.toml
@@ -4,12 +4,12 @@ license="All Rights Reserved"
 
 [[mods]]
   modId="tectonic"
-  version="1.1.9b"
+  version="1.1.10"
   displayName="Tectonic"
   logoFile="pack.png"
-  authors="Apollo404, Catalyst"
+  authors="Apollo"
   description='''
-  25+ new biomes, new terrain features, and more!
+  Enhanced terrain generation with mountain ranges, underground rivers, and more!
   '''
 
   [[dependencies.tectonic]]
