--- a/resourcepacks/tectonic/data/minecraft/worldgen/biome/snowy_taiga.json
+++ b/resourcepacks/tectonic/data/minecraft/worldgen/biome/snowy_taiga.json
@@ -74,7 +74,7 @@
     [
       "minecraft:glow_lichen",
       "tectonic:common/seagrass_land",
-      "tectonic:taiga/trees/trees_snowy_taiga",
+      "minecraft:trees_taiga",
       "minecraft:patch_sugar_cane"
     ],
     [
