--- a/resourcepacks/tectonic/data/tectonic/worldgen/biome/old_growth_snowy_taiga.json
+++ b/resourcepacks/tectonic/data/tectonic/worldgen/biome/old_growth_snowy_taiga.json
@@ -82,7 +82,7 @@
       "minecraft:glow_lichen",
       "tectonic:common/seagrass_land",
       "tectonic:taiga/fallen_logs/spruce",
-      "tectonic:taiga/trees/trees_old_growth_snowy_taiga",
+      "minecraft:trees_old_growth_spruce_taiga",
       "minecraft:brown_mushroom_normal",
       "minecraft:red_mushroom_normal",
       "minecraft:patch_sugar_cane"
