--- a/data/minecraft/worldgen/biome/snowy_taiga.json
+++ b/data/minecraft/worldgen/biome/snowy_taiga.json
@@ -33,6 +33,7 @@
     [],
     [],
     [
+      "tectonic:common/steep/stone",
       "tectonic:common/stone_in_deepslate",
       "tectonic:common/deepslate_in_stone",
       "tectonic:common/disk/magma",
@@ -72,7 +73,7 @@
     [
       "minecraft:glow_lichen",
       "tectonic:common/seagrass_land",
-      "tectonic:taiga/trees/trees_snowy_taiga",
+      "minecraft:trees_taiga",
       "minecraft:patch_sugar_cane"
     ],
     [
