--- a/data/tectonic/worldgen/biome/old_growth_snowy_taiga.json
+++ b/data/tectonic/worldgen/biome/old_growth_snowy_taiga.json
@@ -40,6 +40,7 @@
     [],
     [],
     [
+      "tectonic:common/steep/stone",
       "tectonic:common/stone_in_deepslate",
       "tectonic:common/deepslate_in_stone",
       "tectonic:common/disk/magma",
@@ -80,7 +81,7 @@
       "minecraft:glow_lichen",
       "tectonic:common/seagrass_land",
       "tectonic:taiga/fallen_logs/spruce",
-      "tectonic:taiga/trees/trees_old_growth_snowy_taiga",
+      "minecraft:trees_old_growth_spruce_taiga",
       "minecraft:brown_mushroom_normal",
       "minecraft:red_mushroom_normal",
       "minecraft:patch_sugar_cane"
